# FbxAxisUnitConverter

./: .gitignore  CMakeLists.txt  FbxAxisUnitConverter.sln  README.md  plan.md
FbxAxisUnitConverter/: AnimProcessor.cpp  AnimProcessor.h  ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  ConvertOptions.h  FbxAxisUnitConverter.cpp  FbxAxisUnitConverter.h  FbxAxisUnitConverter.vcxproj  FbxAxisUnitConverter.vcxproj.filters  GeometryProcessor.cpp  GeometryProcessor.h  TransformProcessor.cpp  TransformProcessor.h  main.cpp
FbxAxisUnitConverterTests/: CMakeLists.txt  FbxAxisUnitConverterTests.vcxproj  TestHelpers.h  Test_DeepHierarchy.cpp  Test_IdentityConversion.cpp  Test_PreRotation.cpp  Test_RotationOrder.cpp  Test_SharedMesh.cpp  Test_SkinnedMesh.cpp  Test_UnitOnly.cpp  Test_ZupToYup.cpp
cmake/: FindFBXSDK.cmake
